--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,24 @@ h1{
 	color: black;
 	text-transform: uppercase;
 	font-size: 3em;
-    font-weight: normal;
+	font-weight: normal;
 	margin-bottom: 0px;
 	margin-top: 0px;
-  }
+}
+
 h2 {
 	color: #7d97ad;
 	text-align: center;
 	width: 100%;
 }
+
 h3{
 	color: black;
 	font-size: 2em;
 	margin-top: 5px;
 	font-style: italic;
 }
+
 p {
 	font-family: Arial;
 	color: #2d3c49;
@@ -24,32 +27,40 @@ p {
 	font-size: 20px;
 	text-align: center;
 }
+
 a {
 	font-size: 20px;
 	text-decoration: none;
 }
+
 .content {
 	display: flex;
 	flex-wrap: wrap;
 }
+
 .box {
 	max-width: 100%;
 }
+
 .header {
 	border-bottom: solid #7d97ad 2px;
 }
-.subs, .main {
+
+.subs,
+.main {
 	border-bottom: dashed #7d97ad 1px;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 }
+
 header {
 	width: 100%;
 	margin: 0.5em 0.25em;
 	display: flex;
 	flex-wrap: wrap;
 }
+
 .header-logo {
 	max-width:144px;
 	max-height:113px;
@@ -57,21 +68,24 @@ header {
 	height: auto;
 	padding-top: 20px;
 }
+
 .header-title {
 	text-align: right;
 	width: 75%;
 	padding-top: 20px;
 }
+
 .hero {
 	max-width: 75%;
 	margin-left: auto;
 	margin-right: auto;
-	display: block;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	display: flex;
+	flex-wrap: wrap;
 }
+
 .link-img {
-	display: block;
 	padding: 10px;
 	margin-left: auto;
 	margin-right: auto;
@@ -79,16 +93,19 @@ header {
 	width: 87.75px;
 	max-width: 33%;
 }
+
 .subs {
 	display: flex;
 	flex-wrap: wrap;
 }
+
 .link {
 	padding: 0 8px;
 	text-align: center;
 	box-sizing: border-box;
 	width: 33.33%;
 }
+
 @media screen and (min-width: 900px) {
 	.content {
 		max-width: 850px;
@@ -96,21 +113,27 @@ header {
 		margin-left: auto;
 	}
 }
+
 @media screen and (max-width: 768px) {
 	h1 {
 		text-transform: capitalize;
 	}
 }
-@media screen and (max-width: 599px) {
+
+@media screen and (max-width: 600px) {
 	.logo {
 		width:100%;
 	}
-	.header-logo, .header-title {
+
+	.header-logo,
+	.header-title {
+		text-align: center;
 		margin-left: auto;
 		margin-right: auto;
-		display: block;
-		text-align: center;
+		display: flex;
+		flex-wrap: wrap;
 	}
+
 	.link {
 		width:100%;
 	}
